--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <div class="menu">
             <nav>
                 <ul class="menu-general">
-                    <li>
-                        <a href="">Categorías ▾</a>
+                  <li><a href=""><h6>Ingresa tu</h6><h5>Ubicación</h5></a></li>  
+                  <li>
+                        <a href="">Categorías▾</a>
                         <ul class="categorias">
                             <li><a href="">Hogar</a></li>
                             <li><a href="">Mascotas</a></li>
@@ -44,7 +45,7 @@
                     <li><a href="">Crea tu cuenta</a></li>
                     <li><a href="">Ingresa</a></li>
                     <li><a href="">Mis compras</a></li>
-                    <li><a href="">Carrito</a></li>
+                    <li><a href="">🛒</a></li>
                 </ul>
             </nav>
         </div>
@@ -81,8 +82,8 @@
           <button>Ingresar a tu cuenta</button>
         </div>
         <div class="tarjeta">
-          <img src="images/Ubicacion.png" alt="Imagen 2">
           <h4>Título de la Tarjeta 2</h4>
+          <img src="images/Ubicacion.png" alt="Imagen 2">
           <p>Esta es la descripción de la tarjeta 2.</p>
           <button>Ver más</button>
         </div>
@@ -94,19 +95,19 @@
         </div>
         <div class="tarjeta">
           <img src="images/Descuentos.png" alt="Imagen 1">
-          <h3>Título de la Tarjeta 1</h3>
+          <h4>Título de la Tarjeta 1</h4>
           <p>Esta es la descripción de la tarjeta 1.</p>
           <button>Ver más</button>
         </div>
         <div class="tarjeta">
           <img src="images/Populares.png" alt="Imagen 2">
-          <h3>Título de la Tarjeta 2</h3>
+          <h4>Título de la Tarjeta 2</h4>
           <p>Esta es la descripción de la tarjeta 2.</p>
           <button>Ver más</button>
         </div>
         <div class="tarjeta">
           <img src="images/Protegida.png" alt="Imagen 3">
-          <h3>Título de la Tarjeta 3</h3>
+          <h4>Título de la Tarjeta 3</h4>
           <p>Esta es la descripción de la tarjeta 3.</p>
           <button>Ver más</button>
         </div>
